Improve dependency injection and Inject FileManager